# memyze

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-appimage.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memoryanalyzer.cpp  memoryanalyzer.h  memorybar.cpp  memorybar.h  portmanager.cpp  portmanager.h
media/: video.mkv
packaging/: memyze.desktop
